added camera movement when pacman is moved - pulled out logic for camera setup and movement into own camera class

--- a/lab1c/index.html
+++ b/lab1c/index.html
@@ -41,6 +41,7 @@
 <script src="app/js/main/models/entities/entity.js"></script>
 <script src="app/js/main/models/entities/static-entities/labyrinth/labyrinth.js"></script>
 <script src="app/js/main/models/entities/moving-entities/pacman.js"></script>
+<script src="app/js/main/models/entities/moving-entities/camera.js"></script>
 
 <!-- context -->
 <script src="app/js/main/context/context.js"></script>
