added collision detection

--- a/lab1c/index.html
+++ b/lab1c/index.html
@@ -8,7 +8,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GFX WS 2021 - lab1b</title>
+    <title>GFX WS 2021 - lab1c</title>
 
     <!-- CSS to display the WebGL canvas in full size -->
     <link rel="stylesheet" href="app/css/styles/main.css">
@@ -35,6 +35,7 @@
 <!-- utils -->
 <script src="app/js/utils/color-utils.js"></script>
 <script src="app/js/utils/transformation-utils.js"></script>
+<script src="app/js/utils/collision-detection-util.js"></script>
 
 <!-- moving-entities -->
 <script src="app/js/main/models/entities/moving-entities/direction.js"></script>
@@ -62,8 +63,8 @@
 
 <!-- controller -->
 <script src="app/js/main/controller/render-controller.js"></script>
+<script src="app/js/main/controller/game-controller.js"></script>
 <script src="app/js/main/controller/ui-controller.js"></script>
-<script src="app/js/main/controller/entity-controllers/pacman-controller.js"></script>
 
 <!-- app -->
 <script src="app/js/main/main.js"></script>
