--- a/lab1c/index.html
+++ b/lab1c/index.html
@@ -56,6 +56,7 @@
 <script src="app/js/entities/ground.js"></script>
 <script src="app/js/entities/wall.js"></script>
 <script src="app/js/entities/food.js"></script>
+<script src="app/js/entities/ghost.js"></script>
 
 <!-- context -->
 <script src="app/js/context/context.js"></script>
